feat(query): renamed parameters fizzString&buzzString to snake case fizz_string & buzz_string
